; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_bookmark.c_SortBookmarks.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/ncftp/ncftp/extr_bookmark.c_SortBookmarks.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@gBookmarkTable = common dso_local global i32* null, align 8
@gNumBookmarks = common dso_local global i32 0, align 4
@BookmarkSortProc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SortBookmarks() #0 {
  %1 = load i32*, i32** @gBookmarkTable, align 8
  %2 = icmp eq i32* %1, null
  br i1 %2, label %6, label %3

3:                                                ; preds = %0
  %4 = load i32, i32* @gNumBookmarks, align 4
  %5 = icmp slt i32 %4, 2
  br i1 %5, label %6, label %7

6:                                                ; preds = %3, %0
  br label %13

7:                                                ; preds = %3
  %8 = load i32*, i32** @gBookmarkTable, align 8
  %9 = load i32, i32* @gNumBookmarks, align 4
  %10 = sext i32 %9 to i64
  %11 = load i32, i32* @BookmarkSortProc, align 4
  %12 = call i32 @qsort(i32* %8, i64 %10, i32 4, i32 %11)
  br label %13

13:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @qsort(i32*, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
